--- a/index.html
+++ b/index.html
@@ -3,176 +3,112 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Datali Trans — Вантажні перевезення</title>
+  <title>MIYA Beauty Clinic — Преміум-косметологія</title>
   <link rel="icon" href="assets/logo.svg"/>
-  <link rel="preconnect" href="https://images.unsplash.com"/>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 <header class="header">
-  <div class="container header__row">
-    <div style="display:flex;align-items:center;gap:14px">
-      <img src="assets/logo.svg" alt="logo" height="24"/>
-      <nav class="nav small">
-        <a href="#services">Що пропонуємо</a>
-        <a href="#about">Про нас</a>
-        <a href="#steps">Етапи роботи</a>
-        <a href="#contacts">Контакти</a>
-      </nav>
-    </div>
-    <a class="btn" href="#consult">Зателефонувати</a>
+  <div class="container row">
+    <a href="#"><img src="assets/logo.svg" alt="MIYA" height="32"/></a>
+    <nav>
+      <a href="#about">Про клініку</a>
+      <a href="#services">Послуги</a>
+      <a href="#results">Результати</a>
+      <a href="#contact">Контакти</a>
+    </nav>
+    <a class="btn btn--ghost" href="#contact">Записатись</a>
   </div>
 </header>
 
 <section class="hero">
-  <div class="container hero__inner">
-    <div class="badge">
-      <img src="assets/map-pin.svg" width="16" height="16" alt="pin"/>
-      Львівська область, селище Красне
-    </div>
-    <h1>Вантажні перевезення<br/>по Україні та Європі</h1>
-    <p>Швидко, надійно та ефективно. Забезпечуємо безпечну доставку сипучих матеріалів, зернових культур та інших вантажів.</p>
-    <div class="hero__cta">
-      <input class="input" placeholder="Ваш номер телефону" />
-      <button class="btn" onclick="scrollToConsult()">Отримати консультацію</button>
+  <div class="container inner">
+    <div class="content">
+      <span class="kicker">MIYA Beauty Clinic</span>
+      <h1 class="h1">Преміум-процедури для вашої краси</h1>
+      <p class="lead">Сучасна інʼєкційна та апаратна косметологія. Індивідуальні протоколи, сертифіковані препарати, делікатні результати.</p>
+      <div class="cta">
+        <input class="input" id="leadPhone" placeholder="Ваш номер телефону"/>
+        <button class="btn" onclick="submitLead()">Записатись на консультацію</button>
+        <span id="leadStatus" class="small"></span>
+      </div>
     </div>
   </div>
 </section>
 
 <main>
-  <div class="container">
-    <section class="features" id="features">
-      <div class="feature">
-        <img src="assets/shield.svg" width="18" height="18" alt="shield"/>
-        <div>
-          <strong>Конкурентна ціна</strong>
-          <p class="small">Працюємо чесно і прозоро, узгоджуємо маршрут і остаточну вартість.</p>
-        </div>
-      </div>
-      <div class="feature">
-        <img src="assets/truck.svg" width="40" height="24" alt="truck"/>
-        <div>
-          <strong>Транспорт</strong>
-          <p class="small">Сучасний автопарк і підготовлені водії для різних типів вантажу.</p>
-        </div>
-      </div>
-      <div class="feature">
-        <img src="assets/phone.svg" width="18" height="18" alt="phone"/>
-        <div>
-          <strong>Персональний підхід</strong>
-          <p class="small">Особистий менеджер: від заявки до завершення перевезення.</p>
-        </div>
-      </div>
-    </section>
+  <section class="section about" id="about">
+    <div>
+      <h2>Про клініку</h2>
+      <p>MIYA — простір естетичної медицини з акцентом на природність. Ми працюємо з доказовими методами, сучасними технологіями та дотримуємось високих стандартів безпеки.</p>
+      <div class="divider"></div>
+      <div class="badge"><img src="assets/pin.svg" alt="pin"/> Центр міста</div> •
+      <div class="badge"><img src="assets/phone.svg" alt="phone"/> Персональний супровід</div> •
+      <div class="badge"><img src="assets/insta.svg" alt="insta"/> Фото-результати</div>
+    </div>
+    <div><img src="assets/hero.jpg" alt="MIYA Clinic"></div>
+  </section>
 
-    <h2 class="section-title" id="services">Що ми пропонуємо</h2>
-    <section class="cards">
-      <article class="card">
-        <div class="card__media"></div>
-        <div class="card__body">
-          <strong>Сипучі матеріали</strong>
-          <p class="small">Щебінь, пісок, відсів — доставимо по узгодженому маршруту.</p>
-        </div>
-      </article>
-      <article class="card">
-        <div class="card__media"></div>
-        <div class="card__body">
-          <strong>Зернові культури</strong>
-          <p class="small">Перевезення врожаю на елеватори та переробні підприємства.</p>
-        </div>
-      </article>
-      <article class="card">
-        <div class="card__media"></div>
-        <div class="card__body">
-          <strong>Міжміські перевезення</strong>
-          <p class="small">Швидкі та безпечні маршрути по Україні.</p>
-        </div>
-      </article>
-      <article class="card">
-        <div class="card__media"></div>
-        <div class="card__body">
-          <strong>Міжнародні перевезення</strong>
-          <p class="small">Організуємо логістику у країни ЄС.</p>
-        </div>
-      </article>
-    </section>
-
-    <section id="about" class="kpi">
-      <div class="kpi__left">
-        <h3 style="margin:0 0 8px">Коротко про Datali Trans</h3>
-        <p class="small">Наша команда спеціалізується на вантажних перевезеннях та надає послуги з індивідуальним підходом: від планування маршруту до доставки.</p>
-        <hr class="div"/>
-        <div class="small">Рейтинг 4.9 • 1000+ поїздок</div>
+  <section class="section" id="services">
+    <h2 class="container">Наші послуги</h2>
+    <div class="container grid-3">
+      <div class="card">
+        <strong>Контурна пластика</strong>
+        <p class="small">М'яке моделювання обличчя філерами з природним результатом.</p>
       </div>
-      <div class="kpi__grid">
-        <div class="kpi__tile">10+ років на ринку</div>
-        <div class="kpi__tile">20+ авто у флоті</div>
-        <div class="kpi__tile">24/7 підтримка</div>
-        <div class="kpi__tile">Страхування вантажу</div>
+      <div class="card">
+        <strong>Ботулінотерапія</strong>
+        <p class="small">Делікатне розслаблення м'язів для свіжого та відпочилого вигляду.</p>
       </div>
-    </section>
-  </div>
-
-  <section class="steps" id="steps">
-    <div class="container">
-      <h2 class="section-title" style="margin-top:0">Етапи роботи</h2>
-      <div class="steps__row">
-        <div class="step"><strong>1. Збір інформації</strong><p class="small">Отримуємо дані про вантаж та маршрут</p></div>
-        <div class="step"><strong>2. Комерційна пропозиція</strong><p class="small">Фіксуємо вартість і строки</p></div>
-        <div class="step"><strong>3. Підписання договору</strong><p class="small">Юридичний супровід</p></div>
-        <div class="step"><strong>4. Надання послуг</strong><p class="small">Контроль на кожному етапі</p></div>
-        <div class="step"><strong>5. Оплата по факту</strong><p class="small">Звітність та документи</p></div>
+      <div class="card">
+        <strong>Біоревіталізація</strong>
+        <p class="small">Інтенсивне зволоження та тонус шкіри, відновлення сяйва.</p>
       </div>
     </div>
   </section>
 
-  <section class="cta" id="consult">
+  <section class="section" id="results">
+    <h2 class="container">Результати</h2>
+    <div class="container gallery">
+      <img src="assets/hero.jpg" alt="Result 1"/>
+      <img src="assets/hero.jpg" alt="Result 2"/>
+      <img src="assets/hero.jpg" alt="Result 3"/>
+      <img src="assets/hero.jpg" alt="Result 4"/>
+    </div>
+  </section>
+
+  <section class="section" id="contact">
     <div class="container">
-      <h2 style="margin:0 0 10px">Заявка на консультацію</h2>
-      <div class="row">
+      <h2>Контакти</h2>
+      <p>Телефон: <a href="tel:+380000000000">+38 (000) 000 00 00</a><br/>Графік: Пн–Сб 10:00–19:00</p>
+      <div class="form-row" style="margin-top:10px">
         <input class="input" id="name" placeholder="Ваше ім’я"/>
         <input class="input" id="phone" placeholder="Номер телефону"/>
-        <input class="input" id="topic" placeholder="Що перевозимо?"/>
-        <button class="btn" onclick="submitLead()">Надіслати</button>
-        <div id="lead-status" class="small"></div>
+        <input class="input" id="msg" placeholder="Бажаний час / послуга"/>
+        <button class="btn" onclick="submitContact()">Надіслати</button>
+        <span id="contactStatus" class="small"></span>
       </div>
+      <div class="divider"></div>
+      <iframe style="width:100%;height:320px;border:1px solid #e7e2d8;border-radius:12px"
+        src="https://www.openstreetmap.org/export/embed.html?bbox=30.44%2C50.43%2C30.56%2C50.51&layer=mapnik"></iframe>
     </div>
   </section>
-
-  <div class="container" id="contacts">
-    <h2 class="section-title" style="margin-bottom:8px">Як з нами зв’язатись</h2>
-    <section class="contacts">
-      <div>
-        <div style="display:flex;align-items:center;gap:10px">
-          <img src="assets/map-pin.svg" width="18" height="18" alt="pin"/>
-          <div>
-            <strong>Адреса</strong>
-            <div class="small">Львівська область, селище Красне</div>
-          </div>
-        </div>
-        <hr class="div"/>
-        <div style="display:flex;align-items:center;gap:10px">
-          <img src="assets/phone.svg" width="18" height="18" alt="phone"/>
-          <div>
-            <strong>Телефон</strong>
-            <div class="small"><a href="tel:+380937093737">+38 093 709 37 37</a></div>
-          </div>
-        </div>
-        <hr class="div"/>
-        <div>
-          <strong>Графік роботи</strong>
-          <div class="small">Пн–Пт 9:00–18:00 • Сб 9:00–17:00</div>
-        </div>
-      </div>
-      <iframe class="map" src="https://www.openstreetmap.org/export/embed.html?bbox=24.521%2C49.94%2C24.65%2C50.02&layer=mapnik" style="width:100%;height:360px;border:0"></iframe>
-    </section>
-  </div>
 </main>
 
 <footer class="footer">
-  <div class="container small" style="display:flex;justify-content:space-between;flex-wrap:wrap;gap:12px">
-    <div style="opacity:.7">© 2025 Datali Trans</div>
-    <div>Розроблено з ❤️ AIMA</div>
+  <div class="container row">
+    <div>
+      <img src="assets/logo.svg" alt="logo" height="28"/>
+      <p class="small">© 2025 MIYA Beauty Clinic. Всі права захищені.</p>
+    </div>
+    <div>
+      <div class="small">Телефон: +38 (000) 000 00 00</div>
+      <div class="small">Адреса: Центр міста</div>
+    </div>
+    <div>
+      <div class="small">Instagram</div>
+      <div class="small">Telegram</div>
+    </div>
   </div>
 </footer>
 
